# pt-aten-logger

./: README.md  setup.py
examples/: test_hf.py  test_hf_torch_compile.py  test_hf_triton_mapping.py
pt_aten_logger/: __init__.py  aten_op_shape_logger.py  inductor_tracing.py  log.txt  test2.py  test_hf_triton_mapping.py
tests/: test_add.py  test_compile.py  test_dispatch  test_dispatch.cpp
tests/cpp_tests/: CMakeLists.txt  example.cpp
tests/logs/: log_compile.txt
